# vultr-firewall-watcher-client

./: .gitignore  bun.lockb  cliff.toml  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: release.yml
.github/workflows/: create-release-branch.yml  release.yml  test-build.yml
src/: App.tsx  AppError.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/build-config/: tauri.android.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs
src-tauri/src/app/: api.rs  logging.rs  tray.rs  window.rs
src/components/: MyIPTable.tsx  Navbar.tsx  ProxySwitch.tsx  TauriTitleBar.tsx
src/components/Firewall/Group/: Group.tsx  GroupTable.tsx
src/components/Firewall/Rules/: NewRule.tsx  Rule.tsx  RulesTable.tsx
src/components/FirewallTable/: FirewallRecod.tsx  FirewallTable.tsx
src/hooks/: clipboard.ts  fetch.ts  notification.ts  providers.tsx
src/hooks/environment/: EnvironmentProvider.tsx  environment.ts
src/hooks/theme/: ThemeProvider.tsx  theme.ts
src/pages/: Home.tsx  MyIP.tsx  Rules.tsx  Settings.tsx
src/routes/: index.tsx
src/utils/: clipboard.ts  compatibility.ts  log.ts
src/zustand/: environment.ts  ip.ts  screen.ts  settings.ts  theme.ts
src/zustand/firewall/: firewall.ts  groups.ts  rules.ts
